<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/password_text"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:hint="@string/senha_secreta"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:gravity="center"
        android:padding="8dp" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_above="@id/password_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/nome_do_jogador"
        android:inputType="text"
        android:autofillHints="name"
        android:gravity="center"
        android:padding="8dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/entrar_na_aventura"
        android:textSize="16sp"
        android:textStyle="bold"
        android:elevation="8dp" />

</RelativeLayout>